# quant-lab

./: .gitignore  README.md
notes/: january_effect.md  sp_annual_returns.md  vix.md  worst_month.md
notes/etf/: uvxy.md
notes/news/: trump_tariff_bond.md
pinescript/: REAME.md
pinescript/notes/: movingaverage.md  stochastic.md  swinglines.md
pinescript/scripts/: README.md  bollingerband.pine  movingaverage.pine  swinglines.pine
pinescript/vsa/: README.md  VSA.md  vsa_v1.pine  vsa_v2.pine  wyckoff.pine
pinescript/vsa/script/: spring_entry.py
project-work/: ProjectReport.Rmd  README.md
project-work/quantstrat/strategy/linearregression/: StopLossAndTrailingStopOptimization.R  StopLossOptimization.R
project-work/scripts/strategy/linearregression/: load_data.R  (+3 more)
study/: README.md
study/eventstudy-earnings-report/: .gitignore  Makefile  README.md  pyproject.toml
study/eventstudy-earnings-report/eventstudy_earnings_report/: main.py
study/montecarlo-simulation/: Makefile  README.md  pyproject.toml
study/montecarlo-simulation/montecarlo_simulation/: main.py
study/random-walk/: Makefile  README.md  docker-compose.yaml  dockerfile  main.py  pyproject.toml  terms.md
study/random-walk/nginx/config/: nginx.conf
study/random-walk/nginx/static/: index.html
study/random-walk/random_walk/: app.py  main.py
study/random-walk/random_walk/controllers/: __init__.py  health_check.py  randomwalk_controller.py
study/random-walk/random_walk/simulator/: __init__.py
study/random-walk/random_walk/statistics/: returns.py
study/simulation-models/: Makefile  README.md  docker-compose.yaml  dockerfile  main.py  montecarlo.md  pyproject.toml  randomwalk.md
study/simulation-models/nginx/config/: nginx.conf
study/simulation-models/nginx/static/: index.html
study/simulation-models/scripts/: dashboard.py  simulate_random_walk.py
study/simulation-models/simulation_models/: app.py
study/simulation-models/simulation_models/controllers/: __init__.py  simulation.py
study/simulation-models/simulation_models/simulator/: __init__.py  montecarlo.py  randomwalk.py
study/simulation-models/simulation_models/statistics/: __init__.py  drawdown.py  ratio.py  volatility.py
